# NOAA-Integrator

./: .gitignore  0-download-ais.py  1-category-by-month.py  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
src/noaa_integrator/: __init__.py  bbox.py  cli.py  dedup.py  download.py  extract.py  gdb.py  load.py  organize.py  simplify.py
tests/: test_bbox.py  test_dedup.py  test_download.py  test_extract.py  test_organize.py  test_simplify.py
